# clawbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
docs/: index.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  commands.rs  lib.rs  main.rs  setup.rs  ws_proxy.rs
src-tauri/src/vm/: lima.rs  mod.rs
src/components/: AgentSidebar.tsx  CreateAgentModal.tsx  Icons.tsx  PixelCharacters.tsx
src/hooks/: useClawBox.ts
src/pages/: AgentOnboarding.tsx  Chat.tsx  Dashboard.tsx  SetupWizard.tsx
src/utils/: notifications.ts
