[package]
name = "clawbox"
version = "0.1.0"
description = "A desktop wrapper for OpenClaw with VM isolation"
authors = ["ClawBox Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/clawbox/clawbox"

[lib]
name = "clawbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
thiserror = "1"
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
